III-1425 finetuning on showing errors on creating modal for organizers

--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -108,7 +108,7 @@
   <div class="alert alert-danger" ng-show="saveError">
     Er ging iets fout tijdens het opslaan van je organisatie.
   </div>
-  <div class="alert alert-danger" ng-show="error">
+  <div class="alert alert-danger" ng-show="error && (addressError || contactError)">
     <p ng-show="addressError">Gelieve een geldig adres in te vullen.<br /></p>
     <p ng-show="contactError">Gelieve alle contactinfo correct in te vullen.<br /></p>
   </div>
