--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -33,9 +33,10 @@
                         <span ng-if="priceInfo.price !== 0">
                             <div class="form-inline">
                                 <div class="form-group">
-                                    <input type="number"
+                                    <input type="text"
                                            class="form-control"
                                            name="price"
+                                           ng-pattern="/^\d+(,\d{1,2})?$/"
                                            ng-model="priceInfo.price"
                                            ng-model-options="{ updateOn: 'default' }"
                                            ng-class="{ 'has-error': pfmc.priceForm.priceFieldForm.price.$invalid }"
