III-1944 Remove unneeded currency filter

--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -34,7 +34,7 @@
                 Gratis
               </span>
               <span ng-if="priceInfo.price != 0">
-                {{priceInfo.price | currency}} euro
+                {{priceInfo.price}} euro
               </span>
             </td>
           </tr>
