--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -1,10 +1,10 @@
 <div class="opening-hours-week-schedule">
   <div class="empty" ng-hide="!!cm.openingHoursCollection.openingHours.length">
     <div class="well text-center add-opening-hours">
-        <span>24/24 7/7</span>
-        <br>
-        <span>Elke dag, ieder uur</span>
-        <br>
+        <p>
+          <span class="permanent-title">24/24, 7/7</span> 
+          <span class="permanent-subtitle">Elke dag, ieder uur</span>
+        </p>
         <button type="button" class="btn btn-primary" ng-click="cm.edit()">Uren toevoegen</button>
     </div>
   </div>
