--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -786,3 +786,39 @@ form.booking-period {
         display: none;
     }
 }
+
+.permanent-title {
+  font-size: 2rem;
+  font-weight: 300;
+  color: @gray;
+  display: block;
+  line-height: 1.5;
+}
+
+.permanent-subtitle {
+  font-size: 1.25rem;
+  color: @gray;
+  display: block;
+  line-height: 1.5;
+  margin-top: 5px;
+}
+
+.uib-separator {
+  padding: 0 5px;
+  color: @gray-darker;
+}
+
+.uib-timepicker {
+  display: inline-block;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  height: 34px;
+
+  input {
+    margin-top: -1px;
+  }
+}
+
+.opening-hours-labels {
+  font-weight: 700;
+}
