--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -127,7 +127,8 @@
   }
 }
 
-.close {
+
+.calendar-time-spans .close {
   right: 15px;
   z-index: 9999;
   position: absolute;
@@ -139,16 +140,6 @@
   padding-top: 10px;
 }
 
-.opening-hours-week-schedule {
-  .make-row();
-  
-  .time-table,
-  .empty {
-    .make-xs-column(12);
-    .make-sm-column(8);
-  }
-}
-
 .form-calendar-period {
   .periodic-info {
     .make-row();
@@ -156,7 +147,7 @@
     .start-date,
     .end-date {
       .make-sm-column(6);
-      .make-md-column(3);
+      .make-md-column(4);
     }
 
     .requirements {
