--- a/src/event_form/components/calendar/form-calendar-period.component.html
+++ b/src/event_form/components/calendar/form-calendar-period.component.html
@@ -1,4 +1,6 @@
 <div class="form-calendar-period">
+  <div class="row">
+    <div class="col-sm-4">
     <label>
         <input type="checkbox"
                class="permanent-check"
@@ -8,19 +10,21 @@
                ng-change="$ctrl.formData.setCalendarType($ctrl.calendarType)">
         <span>Start- en einddatum</span>
     </label>
+    </div>
+    <div class="col-sm-8">
     <div class="periodic-info">
         <div class="start-date">
-            <label>van</label>
+            <label>Van</label>
             <udb-form-calendar-datepicker ng-disabled="$ctrl.formData.calendarType !== 'periodic'"
-                                            ng-model="$ctrl.formData.startDate" 
+                                            ng-model="$ctrl.formData.startDate"
                                             ng-change="$ctrl.formData.periodicTimingChanged()">
             </udb-form-calendar-datepicker>
         </div>
 
         <div class="end-date">
-            <label>tot</label>
+            <label>Tot</label>
             <udb-form-calendar-datepicker ng-disabled="$ctrl.formData.calendarType !== 'periodic'"
-                                            ng-model="$ctrl.formData.endDate" 
+                                            ng-model="$ctrl.formData.endDate"
                                             ng-change="$ctrl.formData.periodicTimingChanged()">
             </udb-form-calendar-datepicker>
         </div>
@@ -32,4 +36,6 @@
             </div>
         </div>
     </div>
+  </div>
+</div>
 </div>
