III-2127: Open calendar date-pickers when focusing text field

--- a/src/event_form/components/calendar/form-calendar-datepicker.component.html
+++ b/src/event_form/components/calendar/form-calendar-datepicker.component.html
@@ -8,7 +8,8 @@
            ng-required="true"
            ng-change="datepicker.changed()"
            show-button-bar="false"
-           ng-disabled="datepicker.disabled"/>
+           ng-disabled="datepicker.disabled"
+           ng-focus="datepicker.open()"/>
     <span class="input-group-btn">
         <button type="button"
                 class="btn btn-default"
