III-2127: Bind the right form-data to opening-hours editors

--- a/src/event_form/components/calendar/form-place-calendar.component.html
+++ b/src/event_form/components/calendar/form-place-calendar.component.html
@@ -4,7 +4,8 @@
             <div class="calendar-recurrence" ng-if="calendar.weeklyRecurring">
                 <udb-form-calendar-period form-data="calendar.formData"></udb-form-calendar-period>
                 <hr>
-                <udb-event-form-opening-hours opening-hours="calendar.openingHoursCollection"></udb-event-form-opening-hours>
+                <udb-event-form-opening-hours form-data="calendar.formData" opening-hours="calendar.openingHoursCollection">
+                </udb-event-form-opening-hours>
             </div>
         </div>
     </div>
