--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -816,33 +816,34 @@ form.booking-period {
 .opening-hours-labels {
   font-weight: 700;
 }
+.extra-beschrijving {
+  .loader {
+    border-radius: 6px;
+    margin-left: 6px;
+    width: 100px;
+    position: relative;
+    height: 1em;
+    display: inline-block;
+  }
 
-.loader {
-  border-radius: 6px;
-  margin-left: 6px;
-  width: 100px;
-  position: relative;
-  height: 1em;
-  display: inline-block;
-}
+  .empty {
+    width: 100%;
+    background-color: darken(#EDEDED,5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
 
-.empty {
-  width: 100%;
-  background-color: darken(#EDEDED,5);
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-}
+  .bar {
+    background-color: #5cb85c;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
 
-.bar {
-  background-color: #5cb85c;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-}
-
-.description-info{
+  .description-info{
     font-size: small;
+  }
 }
