III-2154: Enable full-range number search and make sure boundaries work

--- a/src/search/components/query-editor-field.directive.html
+++ b/src/search/components/query-editor-field.directive.html
@@ -65,6 +65,12 @@
       <div ng-switch-when="<">
         <input type="text" class="form-control" ng-model="field.upperBound"/>
       </div>
+
+      <div ng-switch-when="><">
+        <input type="text" class="form-control" ng-model="field.lowerBound"/>
+        <span>tot</span>
+        <input type="text" class="form-control" ng-model="field.upperBound"/>
+      </div>
     </div>
   </div>
 
