III-2149 Remove occurrences of cropping in controller, and therefore remove unnecessary unit-test

--- a/src/management/moderation/components/moderation-summary/moderation-summary.html
+++ b/src/management/moderation/components/moderation-summary/moderation-summary.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <div class="col-md-3" ng-class="{muted: !moc.offer.image}">
-            <img ng-if="moc.offer.image" class="offer-image-thumbnail center-block" ng-src="{{moc.offer.image}}" />
+            <img ng-if="moc.offer.image" class="offer-image-thumbnail center-block" ng-src="{{moc.offer.image+'?maxwidth=150&maxheight=150'}}" />
             <div class="no-img center-block" ng-if="!moc.offer.image">Geen afbeelding</div>
         </div>
     </div>
