--- a/src/event_form/components/age/form-age.html
+++ b/src/event_form/components/age/form-age.html
@@ -8,8 +8,7 @@
                 <a ng-bind="::ageRange.label"
                    ng-class="{'font-bold': fagec.activeAgeRange === type}"
                    href="#"
-                   ng-click="fagec.setAgeRangeByType(type)"></a>
-                <span ng-if="::!$last">, </span>
+                   ng-click="fagec.setAgeRangeByType(type)"></a><span ng-if="::!$last">, </span>
             </span>
             <div ng-show="fagec.rangeInputEnabled" class="form-inline" id="form-age">
                 <div class="form-group" >
