--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -73,7 +73,7 @@
     <div ng-show="pfmc.priceError" class="alert alert-danger">
         Er ging iets fout bij het opslaan van de prijs.
     </div>
-    <div ng-show="pfmc.priceForm.priceFieldForm.price.$invalid && pfmc.priceForm.priceFieldForm.price.$touched" class="alert alert-danger">
+    <div ng-show="pfmc.priceForm.priceFieldForm.price.$invalid && pfmc.priceForm.priceFieldForm.price.$dirty" class="alert alert-danger">
         Geef een geldig bedrag in. Decimalen noteer je met een komma.
     </div>
 
