--- a/src/search/components/query-editor-field.directive.html
+++ b/src/search/components/query-editor-field.directive.html
@@ -44,7 +44,7 @@
         <input type="radio" ng-model="field.term" value="{{::field.name}}"> ja
       </label>
       <label class="radio-inline">
-        <input type="radio" ng-model="field.term" value="!({{::field.name}})"> nee
+        <input type="radio" ng-model="field.term" value="(!{{::field.name}})"> nee
       </label>
     </div>
 
