--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -17,7 +17,7 @@
 // Search components
 @import "result-viewer.less";
 @import "saved-searches.less";
-@import "place-suggestion.less";
+@import "suggestions.less";
 
 // Events components
 @import "event-translator.less";
