--- a/src/event_form/components/organizer/organizer-suggestion-popup.html
+++ b/src/event_form/components/organizer/organizer-suggestion-popup.html
@@ -8,7 +8,7 @@
                 <p>Organisatie niet gevonden?</p>
                 <button type="button" class="btn btn-primary" data-toggle="modal"
                         data-target="#waar-organisatie-toevoegen" ng-click="$parent.openOrganizerModal()">
-                    Nieuwe organisator toevoegen
+                    Nieuwe organisatie toevoegen
                 </button>
             </div>
         </div>
