--- a/src/event_form/components/organizer/organizer-suggestion-popup.html
+++ b/src/event_form/components/organizer/organizer-suggestion-popup.html
@@ -2,7 +2,16 @@
     <li class="uib-typeahead-match" ng-repeat="match in matches track by $index" ng-class="{active: isActive($index) }" ng-mouseenter="selectActive($index)" ng-click="selectMatch($index, $event)" role="option" id="{{::match.id}}">
         <div uib-typeahead-match index="$index" match="match" query="query" template-url="templateUrl"></div>
     </li>
-    <li>
+    <li ng-show="$parent.foundOrganizers>=11">
+      <div class="panel panel-default text-center">
+          <div class="panel-body">
+            <p class="text-muted text-center">
+              <span ng-bind="$parent.foundOrganizers"></span> organisaties gevonden. Vul de zoeknaam aan om verder te filteren of een organisatie toe te voegen.
+            </p>
+          </div>
+        </div>
+    </li>
+    <li ng-show="$parent.foundOrganizers<11">
         <div class="panel panel-default text-center">
             <div class="panel-body">
                 <p>Organisatie niet gevonden?</p>
