III-2226 Show confirm button on first date

--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -149,6 +149,10 @@
   padding-top: 10px;
 }
 
+.form-group-pdn-15{
+    padding-left: 15px;
+}
+
 .form-calendar-period {
   .periodic-info {
     //.make-row();
