--- a/src/event_form/components/organizer-contact/organizer-contact-v2.html
+++ b/src/event_form/components/organizer-contact/organizer-contact-v2.html
@@ -24,8 +24,8 @@
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-switch="contact.type">
                 <div ng-switch-when="url" class="form-group" ng-class="{ 'has-error': urlContactForm.url.$touched && urlContactForm.url.$invalid }">
-                    <ng-form name="urlContactForm">
-                        <input type="text" name="url" udb-http-prefix class="form-control" ng-model="contact.value" ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/" required>
+                    <ng-form ng-init="contact.valid = !urlContactForm.url.$invalid" name="urlContactForm">
+                        <input type="text" name="url" udb-http-prefix class="form-control" ng-model="contact.value" ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/" ng-model-options="{allowInvalid:true}" ng-change="occ.validateContact()" required>
                         <div class="help-block" ng-messages="urlContactForm.url.$error" ng-show="urlContactForm.url.$touched">
                             <p ng-message="required">
                                 Gelieve dit veld niet leeg te laten.
@@ -37,8 +37,8 @@
                     </ng-form>
                 </div>
                 <div ng-switch-when="email" class="form-group" ng-class="{ 'has-error': mailContactForm.email.$touched && mailContactForm.email.$invalid }">
-                    <ng-form name="mailContactForm">
-                        <input type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" class="form-control" ng-model="contact.value" required>
+                    <ng-form ng-init="contact.valid = !mailContactForm.email.$invalid" name="mailContactForm" >
+                        <input type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" class="form-control" ng-model="contact.value" ng-model-options="{allowInvalid:true}" ng-change="occ.validateContact()" required>
                         <div class="help-block" ng-messages="mailContactForm.email.$error" ng-show="mailContactForm.email.$touched">
                             <p ng-message="required">
                                 Gelieve dit veld niet leeg te laten.
@@ -50,8 +50,8 @@
                     </ng-form>
                 </div>
                 <div ng-switch-default class="form-group" ng-class="{ 'has-error': phoneContactForm.phone.$touched && phoneContactForm.phone.$invalid }">
-                    <ng-form name="phoneContactForm">
-                        <input type="tel" name="phone" class="form-control" ng-model="contact.value" ng-pattern="/^[^a-zA-Z]*$/" required>
+                    <ng-form ng-init="contact.valid = !phoneContactForm.phone.$invalid" name="phoneContactForm">
+                        <input type="tel" name="phone" class="form-control" ng-model="contact.value" ng-pattern="/^[^a-zA-Z]*$/" ng-model-options="{allowInvalid:true}" required ng-change="occ.validateContact()">
                         <div class="help-block" ng-messages="phoneContactForm.phone.$error" ng-show="phoneContactForm.phone.$touched">
                             <p ng-message="required">
                                 Gelieve dit veld niet leeg te laten.
@@ -68,10 +68,12 @@
                     </button>
             </div>
         </div>
-        <div class="row" ng-show="occ.contact.length">
-            <p>
-                <a ng-click="occ.addOrganizerContactInfo('url')" href="#">Meer contactgegevens toevoegen</a>
-            </p>
+        <div class="row contact-row" ng-show="occ.contact.length">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p>
+                    <a ng-click="occ.addOrganizerContactInfo('url')" href="#">Meer contactgegevens toevoegen</a>
+                </p>
+            </div>
         </div>
     </div>
 </div>
