--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -118,7 +118,7 @@
   <button type="button" class="btn btn-default" ng-click="cancel()">Sluiten</button>
   <button type="button"
           class="btn btn-primary organisator-toevoegen-bewaren"
-          ng-disabled="disableSubmit"
+          ng-disabled="disableSubmit || contactError"
           ng-click="validateNewOrganizer()">
     Bewaren <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
   </button>
