--- a/src/event_form/components/organizer-contact/organizer-contact.html
+++ b/src/event_form/components/organizer-contact/organizer-contact.html
@@ -1,122 +1,81 @@
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <p><strong>Contact</strong></p>
     </div>
-    <form name="occ.organizerContactWrapper">
-        <div class="col-sm-12">
-            <div ng-show="occ.contact.length === 0">
-                <ul class="list-unstyled">
-                    <li><a ng-click="occ.addOrganizerContactInfo('phone')" href="#">Telefoonnummer toevoegen</a></li>
-                    <li><a ng-click="occ.addOrganizerContactInfo('email')" href="#">E-mailadres toevoegen</a></li>
-                    <li><a ng-click="occ.addOrganizerContactInfo('url')" href="#">Andere website toevoegen</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-sm-12"
-             ng-show="occ.contact.length">
-            <div class="row contact-row"
-                 ng-repeat="contact in occ.contact track by $index">
-
-                <div class="col-sm-5">
-                    <select class="form-control"
-                            ng-model="contact.type"
-                            ng-change="occ.validateContact()">
+</div>
+<div class="row" ng-show="occ.contact.length === 0">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <ul class="list-unstyled">
+            <li><a ng-click="occ.addOrganizerContactInfo('phone')" href="#">Telefoonnummer toevoegen</a></li>
+            <li><a ng-click="occ.addOrganizerContactInfo('email')" href="#">E-mailadres toevoegen</a></li>
+            <li><a ng-click="occ.addOrganizerContactInfo('url')" href="#">Andere website toevoegen</a></li>
+        </ul>
+    </div>
+</div>
+<div class="row" ng-show="occ.contact.length">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <form name="occ.organizerContactWrapper">
+            <div class="row contact-row" ng-repeat="contact in occ.contact track by $index">
+                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                    <select class="form-control" ng-model="contact.type" ng-change="occ.validateContact()">
                         <option value="url">Website</option>
                         <option value="phone">Telefoonnummer</option>
                         <option value="email">E-mailadres</option>
                     </select>
                 </div>
-                <div class="col-sm-6">
-                    <ng-form name="organizerContact"
-                             ng-switch="contact.type"
-                             ng-class="{'has-error' : (organizerContact.contact.$touched && organizerContact.contact.$invalid) ||
-                             (organizerContact.contact.$invalid && occ.organizerContactWrapper.$submitted)}"
-                             >
-                        <input type="text"
-                               ng-switch-when="url"
-                               udb-http-prefix
-                               class="form-control"
-                               ng-model="contact.value"
-                               ng-model-options="{ updateOn: 'blur',allowInvalid: true}"
-                               ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/"
-                               ng-change="occ.validateContact()"
-                               name="contact"
-                               required/>
-                        <input type="text"
-                               ng-switch-when="email"
-                               ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/"
-                               class="form-control"
-                               ng-model="contact.value"
-                               ng-model-options="{ updateOn: 'blur',allowInvalid: true}"
-                               ng-change="occ.validateContact()"
-                               name="contact"
-                               required/>
-                        <input type="text"
-                               ng-switch-default
-                               class="form-control"
-                               ng-model="contact.value"
-                               ng-pattern="/^[^a-zA-Z]*$/"
-                               ng-model-options="{ updateOn: 'blur',allowInvalid: true}"
-                               ng-change="occ.validateContact()"
-                               name="contact"
-                               required/>
-                    </ng-form>
-                    <ng-messages for="organizerContact.contact.$error"
-                                 ng-if="contact.type==='url'"
-                                 class="has-error"
-                                 ng-show="(organizerContact.contact.$dirty && organizerContact.contact.$invalid && contact.value) ||
-                                 (organizerContact.contact.$invalid && occ.organizerContactWrapper.$submitted && contact.value)">
-                        <ng-message when="pattern"
-                                    class="help-block">
-                            Gelieve een geldige url in te vullen.
-                        </ng-message>
-                    </ng-messages>
-                    <ng-messages for="organizerContact.contact.$error"
-                                 ng-if="contact.type==='email'"
-                                 class="has-error"
-                                 ng-show="(organizerContact.contact.$dirty && organizerContact.contact.$invalid && contact.value) ||
-                                 (organizerContact.contact.$invalid && occ.organizerContactWrapper.$submitted && contact.value)">
-                        <ng-message when="pattern"
-                                    class="help-block">
-                            Gelieve een geldig e-mailadres in te vullen.
-                        </ng-message>
-                    </ng-messages>
-                    <ng-messages for="organizerContact.contact.$error"
-                                 ng-if="contact.type==='phone'"
-                                 class="has-error"
-                                 ng-show="(organizerContact.contact.$dirty && organizerContact.contact.$invalid && contact.value) ||
-                                 (organizerContact.contact.$invalid && occ.organizerContactWrapper.$submitted && contact.value)">
-                        <ng-message when="pattern"
-                                    class="help-block">
-                            Gelieve een geldig telefoonnummer in te vullen.
-                        </ng-message>
-                    </ng-messages>
-                    <ng-messages for="organizerContact.contact.$error"
-                                 class="has-error"
-                                 ng-show="(organizerContact.contact.$dirty && organizerContact.contact.$invalid && !contact.value) ||
-                                 (organizerContact.contact.$invalid && occ.organizerContactWrapper.$submitted && !contact.value)">
-                        <ng-message when="required"
-                                    class="help-block">
-                            Gelieve dit veld niet leeg te laten.
-                        </ng-message>
-                    </ng-messages>
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-switch="contact.type">
+                    <div ng-switch-when="url" class="form-group" ng-class="{ 'has-error': urlContactForm.url.$touched && urlContactForm.url.$invalid }">
+                        <ng-form name="urlContactForm">
+                            <input type="text" name="url" udb-http-prefix class="form-control" ng-model="contact.value" ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/" ng-model-options="{allowInvalid:true}" ng-change="occ.validateContact()" required>
+                            <div class="help-block" ng-messages="urlContactForm.url.$error" ng-show="urlContactForm.url.$touched">
+                                <p ng-message="required">
+                                    Gelieve dit veld niet leeg te laten.
+                                </p>
+                                <p ng-message="pattern">
+                                    Gelieve een geldige url in te vullen.
+                                </p>
+                            </div>
+                        </ng-form>
+                    </div>
+                    <div ng-switch-when="email" class="form-group" ng-class="{ 'has-error': mailContactForm.email.$touched && mailContactForm.email.$invalid }">
+                        <ng-form name="mailContactForm">
+                            <input type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" class="form-control" ng-model="contact.value" ng-model-options="{allowInvalid:true}" ng-change="occ.validateContact()" required>
+                            <div class="help-block" ng-messages="mailContactForm.email.$error" ng-show="mailContactForm.email.$touched">
+                                <p ng-message="required">
+                                    Gelieve dit veld niet leeg te laten.
+                                </p>
+                                <p ng-message="pattern">
+                                    Gelieve een geldig e-mailadres in te vullen.
+                                </p>
+                            </div>
+                        </ng-form>
+                    </div>
+                    <div ng-switch-default class="form-group" ng-class="{ 'has-error': phoneContactForm.phone.$touched && phoneContactForm.phone.$invalid }">
+                        <ng-form name="phoneContactForm">
+                            <input type="tel" name="phone" class="form-control" ng-model="contact.value" ng-pattern="/^[^a-zA-Z]*$/" ng-model-options="{allowInvalid:true}" required ng-change="occ.validateContact()">
+                            <div class="help-block" ng-messages="phoneContactForm.phone.$error" ng-show="phoneContactForm.phone.$touched">
+                                <p ng-message="required">
+                                    Gelieve dit veld niet leeg te laten.
+                                </p>
+                                <p ng-message="pattern">
+                                    Gelieve een geldig telefoonnummer in te vullen.</p>
+                            </div>
+                        </ng-form>
+                    </div>
                 </div>
-                <div class="col-sm-1">
-                    <button type="button"
-                            class="close"
-                            aria-label="Close"
-                            ng-click="occ.deleteOrganizerContactInfo($index)">
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <button type="button" class="close" aria-label="Close" ng-click="occ.deleteOrganizerContactInfo($index)">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
             </div>
+        </form>
+        <div class="row contact-row" ng-show="occ.contact.length">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p>
+                    <a ng-click="occ.addOrganizerContactInfo('url')" href="#">Meer contactgegevens toevoegen</a>
+                </p>
+            </div>
         </div>
-        <div class="col-sm-12"
-             ng-show="occ.contact.length">
-            <p>
-                <a ng-click="occ.addOrganizerContactInfo('url')" href="#">Meer contactgegevens toevoegen</a>
-            </p>
-        </div>
-    </form>
+    </div>
 </div>
